test/classes/initializers/parentCall/inParallel.good
inParallel.chpl:7: error: super.init() call in parallel statement makes Phase fror other parallel statements ambiguous
